--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,7 @@ body {
   font-size: 0.75rem;
   line-height: 2;
   color: #000;
+  position: relative;
 }
 
 a {
@@ -81,21 +82,60 @@ select::-ms-expand {
   text-transform: uppercase;
 }
 
+/*----- ボタン関連-----*/
 .btn {
-  border: 1px solid #000;
   font-family: "Open Sans", sans-serif;
   text-transform: uppercase;
   line-height: 1;
   text-align: center;
   display: block;
 }
-.btn.--sp-menu {
+.btn.--cta {
+  border: 1px solid #000;
+  font-size: 13px;
+  padding: 15px;
+}
+.btn.--reserve {
+  border: 1px solid #000;
   font-size: 14px;
   padding: 18px 50px;
 }
-.btn.--cta {
-  font-size: 13px;
-  padding: 15px 50px;
+.btn.--reserve.spfixed {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.65);
+  position: fixed;
+  line-height: 1.4;
+  bottom: 0;
+  left: 0;
+  font-weight: 300;
+  padding: 15px;
+  z-index: 1;
+  border: none;
+}
+.btn.--reserve.pcfixed {
+  background-color: rgba(255, 255, 255, 0.65);
+  border-right: none;
+  line-height: 1.4;
+  writing-mode: vertical-rl;
+  padding: 12px;
+  height: 190px;
+  position: fixed;
+  right: 0;
+  top: 50%;
+  display: none;
+}
+.btn.reserve-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn.reserve-icon::after {
+  content: "";
+  background: url(../images/icon-reserve.svg) center/cover no-repeat;
+  width: 12px;
+  height: 14px;
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .site-title img {
@@ -114,6 +154,26 @@ select::-ms-expand {
   .site-title.--footer img {
     max-width: 206px;
   }
+  /*----- ボタン関連-----*/
+  .btn {
+    letter-spacing: 0.1em;
+  }
+  .btn.--cta {
+    font-size: 15px;
+    padding: 23px;
+  }
+  .btn.--reserve {
+    border: 1px solid #000;
+    font-size: 14px;
+    padding: 18px 50px;
+    display: none;
+  }
+  .btn.--reserve.spfixed {
+    display: none;
+  }
+  .btn.--reserve.pcfixed {
+    display: block;
+  }
 }
 /* -------------------------------------------- */
 /* header */
@@ -123,7 +183,7 @@ select::-ms-expand {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 30px;
+  padding: 30px 30px 40px;
 }
 
 .menu {
@@ -138,6 +198,7 @@ select::-ms-expand {
   top: 0;
   left: 0;
   display: none;
+  z-index: 2;
 }
 .menu.active {
   display: flex;
@@ -173,13 +234,13 @@ select::-ms-expand {
     padding: 50px 70px 0;
   }
   .menu {
-    width: auto;
+    width: 100%;
     height: auto;
     position: static;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
   }
   .header-nav {
     font-size: 14px;
@@ -192,11 +253,12 @@ select::-ms-expand {
   }
   .header-nav__item {
     margin-top: 0px;
-    margin-left: 40px;
+    margin-left: 3.8240917782vw;
   }
   .sns-list {
     margin-top: 0px;
     margin-left: 80px;
+    min-width: 100px;
   }
   .sns-list__image {
     width: 16px;
@@ -267,8 +329,17 @@ select::-ms-expand {
 /* -------------------------------------------- */
 /* mv */
 /* -------------------------------------------- */
+.mv {
+  padding-bottom: 50px;
+}
 .mv__catch {
   text-align: center;
+  font-size: 13px;
+}
+
+.slide {
+  margin-top: 40px;
+  padding: 0 40px;
 }
 
 /* Hover Event */
@@ -469,29 +540,37 @@ section {
 .footer {
   border-top: 1px solid #E8E8E8;
   padding: 46px 0;
+  line-height: 1.4;
 }
 .footer-list__title {
   color: #656565;
   font-size: 10px;
   letter-spacing: 0.1em;
   margin-right: 50px;
+  font-weight: 300;
+  width: 18%;
 }
-.footer__access {
-  display: flex;
-}
-.footer__sitemap {
-  display: flex;
-}
-.footer-sns__wrap {
-  display: flex;
-}
-
-.footer-nav__list {
+.footer__copy {
+  font-weight: 300;
   font-size: 10px;
+  margin-top: 70px;
 }
 
-.footer-access {
+/* sp用折り返し */
+.column-wrap {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: pink;
+}
+
+.flex {
+  display: flex;
+}
+
+/* -----アクセス----- */
+.footer-access__wrap {
+  flex: 1;
 }
 .footer-access__name {
   font-weight: 900;
@@ -500,11 +579,46 @@ section {
   margin-top: 30px;
 }
 .footer-access__address {
-  line-height: 1;
   margin-top: 6px;
 }
 .footer-access__map {
   margin-top: 20px;
+}
+
+/*----- サイトマップ -----*/
+.footer-sitemap .footer-nav {
+  flex: 1;
+}
+.footer-sitemap .footer-nav__list {
+  height: 88px;
+  font-size: 10px;
+}
+.footer-sitemap .footer-nav__item:not(:first-child):not(:nth-child(4)) {
+  margin-top: 23px;
+}
+
+/*----- snsリンク -----*/
+.footer-sns__list {
+  flex: 1;
+  height: 64px;
+}
+.footer-sns__item {
+  margin-right: 30px;
+}
+.footer-sns__item:nth-child(even) {
+  margin-top: 33px;
+}
+.footer-sns__link {
+  display: flex;
+  align-items: center;
+  font-size: 10px;
+  color: #9D9D9D;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+}
+.footer-sns__image {
+  width: 15px;
+  margin-right: 10px;
 }
 
 /* Hover Event */
