--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -27,6 +27,7 @@ body {
   font-size: rem(12);
   line-height: 2;
   color: $textColor;
+  position: relative;
   // letter-spacing: 0.05em;
 }
 
@@ -96,24 +97,68 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   text-transform: uppercase;
 }
 
+/*----- ボタン関連-----*/
 .btn{
-  border: 1px solid #000;
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   line-height: 1;
   text-align: center;
   display: block;
-
-  &.--sp-menu{
-    font-size: 14px;
-    padding: 18px 50px;
-  }
   
   &.--cta{
+    border: 1px solid #000;
     font-size: 13px;
-    padding: 15px 50px;
+    padding: 15px;
+  }
+  
+  &.--reserve{
+    border: 1px solid #000;
+    font-size: 14px;
+    padding: 18px 50px;
+
+    &.spfixed{
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.65);
+      position: fixed;
+      line-height: 1.4;
+      bottom: 0;
+      left: 0;
+      font-weight: 300;
+      padding: 15px;
+      z-index: 1;
+      border: none;
+    }
+  
+    &.pcfixed{
+      background-color: rgba(255, 255, 255, 0.65);
+      border-right: none;
+      line-height: 1.4;
+      writing-mode: vertical-rl;
+      padding: 12px;
+      height: 190px;
+      position: fixed;
+      right: 0;
+      top: 50%;
+      display: none;
+    }
+  }
+  
+  &.reserve-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &::after{
+      content:"";
+      background: url(../images/icon-reserve.svg) center/cover no-repeat;
+      width: 12px;
+      height: 14px;
+      display: inline-block;
+      margin-left: 10px;
+    }
   }
 }
+
 
 .site-title{
   img{
@@ -140,6 +185,30 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
     }
   }
 
+  /*----- ボタン関連-----*/
+  .btn{
+    letter-spacing: 0.1em;
+    
+    &.--cta{
+      font-size: 15px;
+      padding: 23px;
+    }
+    
+    &.--reserve{
+      border: 1px solid #000;
+      font-size: 14px;
+      padding: 18px 50px;
+      display: none;
+
+      &.spfixed{
+        display: none;
+      }
+    
+      &.pcfixed{
+        display: block;
+      }
+    }
+  }
 }
 
 /* -------------------------------------------- */
@@ -153,7 +222,7 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px 30px 40px;
   }
 }
 
@@ -169,6 +238,7 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   top: 0;
   left: 0;
   display: none;
+  z-index: 2;
 
   &.active{
     display: flex;
@@ -215,13 +285,13 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   }
 
   .menu{
-    width: auto;
+    width: 100%;
     height: auto;
     position: static;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
   }
 
   .header-nav{
@@ -236,13 +306,15 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
     
     &__item{
       margin-top: 0px;
-      margin-left: 40px;
+      // margin-left: 40px;
+      margin-left: calc(40/1046*100vw);
     }
   }
 
   .sns-list{
     margin-top: 0px;
     margin-left: 80px;
+    min-width: 100px;
     
     &__image{
       width: 16px;
@@ -352,9 +424,16 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
 /* mv */
 /* -------------------------------------------- */
 .mv{
+  padding-bottom: 50px;
   &__catch{
     text-align: center;
+    font-size: 13px;
   }
+}
+
+.slide{
+  margin-top: 40px;
+  padding: 0 40px;
 }
 
 @media (min-width: 765px) {
@@ -671,36 +750,43 @@ section{
 .footer{
   border-top: 1px solid #E8E8E8;
   padding: 46px 0;
+  line-height: 1.4;
 
   &-list__title {
     color:#656565;
     font-size: 10px;
     letter-spacing: 0.1em;
     margin-right: 50px;
+    font-weight: 300;
+    width: 18%;
   }
 
-  &__access{
-    display: flex;
-  }
-
-  &__sitemap{
-    display: flex;
-  }
-
-  &-sns__wrap{
-    display: flex;
-  }
-}
-
-.footer-nav{
-  &__list{
+  &__copy{
+    font-weight: 300;
     font-size: 10px;
+    margin-top: 70px;
   }
 }
 
-.footer-access{
+/* sp用折り返し */
+.column-wrap{
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: pink;
+}
 
+.flex{
+  display: flex;
+}
+
+/* -----アクセス----- */
+.footer-access{
+
+  &__wrap{
+    flex:1;
+  }
+  
   &__name{
     font-weight: 900;
   }
@@ -710,7 +796,6 @@ section{
   }
 
   &__address{
-    line-height: 1;
     margin-top: 6px;
   }
 
@@ -719,12 +804,59 @@ section{
   }
 }
 
-.footer-sitemap{
 
+/*----- サイトマップ -----*/
+.footer-sitemap{
+  .footer-nav{
+    flex:1;
+
+    &__list{
+      height: 88px;
+      font-size: 10px; 
+    }
+
+    &__item{
+      
+      &:not(:first-child):not(:nth-child(4)){
+        margin-top: 23px;
+      }
+    }
+  }
 }
 
+
+/*----- snsリンク -----*/
 .footer-sns-wrap{
 
+}
+.footer-sns{
+
+  &__list{
+    flex:1;
+    height: 64px;
+  }
+  
+  &__item{
+    margin-right: 30px;
+
+    &:nth-child(even){
+      margin-top: 33px;
+    }
+  }
+  
+  &__link{
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+    color:#9D9D9D;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+  }
+  
+  &__image{
+    width: 15px;
+    margin-right: 10px;
+  }
 }
 
 @media (min-width: 765px) {
